fixed 404 page spacing

--- a/assets/scss/templates/404.scss
+++ b/assets/scss/templates/404.scss
@@ -31,7 +31,7 @@
 }
 
 .error404 {
-  .medium-8 {
+  main .medium-8 {
     margin-bottom: $space-medium*2;
   }
 }
